# Honey-Coupon-Clone

./: .dockerignore  .gitignore  DOCKERFILE  README.md  docker-compose.yml  render.yaml  tikTokScraper.py
backend/: README.md  build.sh  data-export-12-24.json  dump.json  dumpdata.json  export-02-20.json  export-12-25.json  exportutf8.json  manage.py  new_data.csv  pyproject.toml  pytest.ini  render.yaml  requirements.txt  structureMongoData.ipynb  structureMongoData.ipynb.orig
backend/api/: scrapyd.py
backend/backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/backend/settings/: common.py  dev.py  prod.py
backend/db/: mongo.py
backend/docker/: CeleryDockerfile  DjangoDockerfile  DjangoProductionDockerfile
backend/scripts/: uploadSampleData.sh
backend/templates/: amazon_coupon_email.html
backend/unboxr/: admin.py  apps.py  models.py  tasks.py  tests.py  views.py
backend/unboxr/migrations/: 0001_initial.py  0002_alter_promotion_post_promotion_date_and_more.py  0002_remove_product_product_page_and_more.py  0003_alter_promotion_post_promotion_date.py  0003_promotion_product_and_more.py  0004_productidtype_remove_product_product_other_id_and_more.py  0004_promotion_coupon_code_in_the_link_and_more.py  0005_remove_productskuid_product_id_type_and_more.py  0005_rename_unboxing_image_promotion_and_more.py  0006_alter_productidtype_name_and_more.py  0006_alter_promotion_post_promotion_date.py  0007_alter_promotion_post_promotion_date.py  0008_alter_promotion_post_promotion_date.py  0009_alter_promotion_post_promotion_date.py
backend/unboxr/serializers/: serializers.py
backend/unboxr/testData/: build_test_data.py
backend/unboxr/testData/fixtures/: anker-test.json
backend/users/: models.py  urls.py  views.py
docker/: env.prod
extension/: dev.env  jest.config.js  manifest.json  package-lock.json  package.json  prod.env  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
extension/src/__tests__/: snooze.test.js
extension/src/api/: auth.tsx  backendModels.ts  backendRequests.tsx
extension/src/assets/: boxLottie.json  piggieLottie.json
extension/src/background/: background.ts  backgroundIndex.tsx
extension/src/common/: types.tsx
extension/src/contentScript/: MainUnboxingEntryPoint.tsx  PopoverContainer.tsx  TikTokVideo.tsx  UnboxingPopoverIcon.tsx  amazonIndex.tsx  applyCouponsAlert.tsx  contentScript.tsx  index.tsx  (+11 more)
scraper/: DockerFile  README.md  data-20221228-204114.json  debugger_runner.py  docker-compose.yml  pyproject.toml  requirements.txt  scraper_results_analysis.ipynb  scrapy.cfg  scrapyd.conf  scrapydweb_settings_v10.py  setup.py  tiktokScraper.py  urls_first_batch.txt
scraper/docker/: .ScrapydDockerFile.swo  .ScrapydDockerFile.swp  ProductsScrapyDockerFile  ScrapydDeployScrapers  ScrapydDockerFile  ScrapydwebDockerFile
scraper/matching/: main.py
scraper/products/: items.py  oracleDb.py  pipelines.py  proxylist.txt  settings.py  utility.py
scraper/products/spiders/: amazon.py  crawlers.py  other.py
(+20 files in other folders)
