[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["David Deisadze <ddeisadze@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
pillow = "^9.3.0"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
