[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["David Deisadze <ddeisadze@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
pillow = "^9.3.0"
django-cors-headers = "^3.13.0"
requests-toolbelt = "^0.10.1"
pytest-django = "^4.5.2"
celery = "^5.2.7"
django-celery-beat = "^2.4.0"
redis = "^4.5.1"
pymongo = "^4.3.3"
flower = "^1.2.0"
django-anymail = {extras = ["sendgrid"], version = "^9.0"}
django-mjml = "^1.0"
django-allauth = "^0.52.0"
dj-rest-auth = {extras = ["with-social"], version = "^3.0.0"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.10.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
