[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["David Deisadze <ddeisadze@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"
spacy = "^3.4.4"
nltk = "^3.8"
scrapy = "^2.7.1"
scrapy-fake-useragent = "^1.4.4"
oci = "^2.90.0"
borneo = "^5.3.7"
pymongo = "^4.3.3"
scrapy-rotating-proxies = "^0.6.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^1.5.2"
notebook = "^6.5.2"
spacymoji = "^3.0.1"


[tool.poetry.group.scrapyd.dependencies]
scrapyd = "^1.3.0"
sqlalchemy = ">=1.2.15,<1.4.0"
werkzeug = "2.0.2"
APScheduler = "3.9.1"
scrapydweb = "^1.4.0"
scrapyd-client = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"